Align correctly checkpoint in mvt editor

--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/geoportailv3.scss
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/geoportailv3.scss
@@ -278,6 +278,9 @@ app-medium-style-item div {
     float: right;
     margin-right: 11px;
   }
+  input[type=checkbox] {
+    margin-top: 5px;
+  }
 }
 
 div[data-toggle="collapse"] {
